--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -34,12 +34,21 @@
                         <a class="label label-primary" ng-repeat="tag in availableTags" ng-click="applyFilter(tag)">
                             {{tag.name}}</a>
                         <span class="label label-primary" ng-show="availableTags.length == 0">-</span>
-                        <h4>Courses:</h4>
+
                     </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                        <div class="col-xs-12 col-md-4">
+                            <h4  class="courses-title">Courses:</h4>
 
-                    <!--{{category}}-->
+                            <a ng-click="toggle = !toggle" class="cursor ionicons ion-search course-search-icon"></a>
+                            <input class="form-control course-search-box"
+                                   id="search-box"
+                                   placeholder="Search..." ng-show="toggle" ng-model="query">
+                        </div>
 
-                    <div class="col-sm-6 col-lg-3" ng-repeat="c in courses">
+                    </div>
+                    <div class="col-sm-6 col-lg-3" ng-repeat="c in courses | filter:query">
                         <div class="form_hover" ng-mouseenter="getCourseAnalytics(c._id)">
                             <div class="box box-primary peekCourse">
                                 <div class="box-header with-border">
@@ -63,7 +72,8 @@
 
                                     </div>
                                     <div class="box-footer">
-                                        <a class="btn btn-primary" href="/course/{{c.slug}}/#/cid/{{c._id}}"><i class=""></i> Go to course</a>
+                                        <a class="btn btn-primary" href="/course/{{c.slug}}/#/cid/{{c._id}}"><i
+                                                class=""></i> Go to course</a>
                                     </div>
                                 </div>
                             </div>
