--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -2,7 +2,7 @@
 <html ng-app="courseMapper" ng-controller="MainController">
 <head>
     <meta charset="UTF-8">
-    <title>{{ Page.title() }}</title>
+    <title></title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2-->
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
