--- a/views/admin-lte/cm-admin/categories.ejs
+++ b/views/admin-lte/cm-admin/categories.ejs
@@ -4,7 +4,7 @@
         <div class="box-body with-border">
             <div ng-controller="categoryFormController">
                 <form role="form" ng-submit="processForm('root')" id="rootCategory">
-                    <div class="col-xs-6 input-group input-group-sm" ng-class="{ 'has-error' : errorName }">
+                    <div class="col-xs-6 input-group input-group-sm">
                         <input type="text" name="category" class="form-control input-sm col-xs-3"
                                placeholder="Add New Category ..." ng-model="formData['root'].name"/>
                         <input type="hidden" name="parent" ng-value="0" value="0"
@@ -15,18 +15,24 @@
                               </button>
                               </span>
                     </div>
-                    <span class="help-block" ng-show="errorName">{{ errorName }}</span>
+                    <error-block messages="errors"></error-block>
                 </form>
             </div>
         </div>
     </div>
 
-    <script type="text/ng-template"  id="tree_item_renderer.html">
+    <script type="text/ng-template" id="tree_item_renderer.html">
         <li id="{{data.slug}}">
-            <p><span><a href="#/categories/{{data.slug}}">{{data.name}}</a></span></p>
+            <p>
+                <span>
+                    <a class="cursor" ng-click="deleteCategory(data._id)"><i class="ionicons ion-android-delete"></i></a>
+                    <a class="cursor" ng-click="editCategory(data)"><i class="ionicons ion-edit"></i></a>
+                    <a href="#/categories/{{data.slug}}">{{data.name}}</a>
+                </span>
+            </p>
 
             <form role="form" ng-submit="processForm(data._id)">
-                <div class="col-xs-12 input-group input-group-sm col-lg-6" >
+                <div class="col-xs-12 input-group input-group-sm col-lg-6">
                     <input name="category" type="text" ng-model="formData[data._id].name"
                            class="form-control input-sm col-xs-3" placeholder="Add Child ..."/>
                     <input type="hidden" name="parent" ng-value="data._id"
@@ -37,7 +43,7 @@
                           <i class="fa fa-plus"></i> Add Child
                       </button>
                       </span>
-                    <span class="help-block" ng-show="errorName">{{ errorName }}</span>
+                    <error-block messages="errors"></error-block>
                 </div>
             </form>
             <ul>
@@ -49,7 +55,7 @@
 
     <div class="box">
         <div class="box-body with-border">
-            <table id="categoryList" class="table table-bordered  ">
+            <table id="categoryList" class="table table-bordered">
                 <tbody ng-controller="categoryFormController">
                 <tr>
                     <td>
@@ -63,5 +69,38 @@
         </div>
     </div>
     <!-- /.box-body -->
+
+    <modal-box mid="editCategoryModal" title="Edit Category">
+        <form role="form" ng-submit="saveEditCategory(editCategoryForm.$valid)" name="editCategoryForm">
+
+            <div class="control-group">
+
+                <div class="controls" >
+                    <input type="text" id="name" name="name" placeholder="" class="form-control"
+                           ng-model="editData.name"
+                           required ng-required="true"
+                            >
+                </div>
+            </div>
+
+            <div class="box-footer">
+                <error-block ng-show="errors.length > 0" messages="errors"></error-block>
+                <!-- Button -->
+                <div class="controls">
+                    <button class="btn btn-primary" ng-click="editCategoryForm.$setDirty()">
+                        Save
+                    </button>
+
+                    <button type="button" class="btn btn-warning"
+                            data-dismiss="modal" aria-label="Close"
+                            ng-click="cancel()">
+                        <span aria-hidden="true">Cancel</span>
+                    </button>
+                </div>
+            </div>
+        </form>
+
+    </modal-box>
+
 </div>
 <div class="clear"></div>
