--- a/views/admin-lte/cm-admin/header.ejs
+++ b/views/admin-lte/cm-admin/header.ejs
@@ -17,6 +17,7 @@
 
     <!-- Extras -->
     <link href="/datatables/dataTables.bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="/angular-toastr/angular-toastr.min.css" rel="stylesheet" type="text/css"  />
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
