--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -2,6 +2,8 @@
 
 <section class="content-header action-header blue">
     <ol class="breadcrumb">
+        <li class="visible-sm-inline-block visible-xs-inline-block">
+            <a class="cursor" onclick="toggleTabMenu()"><i class="ionicons ion-navicon-round"></i></a></li>
         <li class="home">{{course.name}}</li>
         <li class="active">{{currentTab}}</li>
     </ol>
