--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -1,10 +1,11 @@
 <% include actionBarCourse %>
 
 <section class="content-header action-header blue">
+    <li class="visible-sm-inline-block visible-xs-inline-block draw-tab-button">
+        <a class="cursor" onclick="toggleTabMenu()" style="color: white"><i class="ionicons ion-navicon-round"></i></a>
+    </li>
     <ol class="breadcrumb">
-        <li class="visible-sm-inline-block visible-xs-inline-block">
-            <a class="cursor" onclick="toggleTabMenu()"><i class="ionicons ion-navicon-round"></i></a></li>
-        <li class="home">{{course.name}}</li>
+        <li class="home"><a href="#/cid/{{course._id}}?tab=preview">{{course.name}}</a></li>
         <li class="active">{{currentTab}}</li>
     </ol>
 
