--- a/public/video-annotations/styles/styles.css
+++ b/public/video-annotations/styles/styles.css
@@ -1,3 +1,20 @@
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background: #3c8dbc;
+    //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(60, 141, 188, 0.3);
+}
+
 #inline-va-container {
     position: absolute;
     top: 0;
@@ -5,13 +22,21 @@
     background: transparent;
     width: 100%;
     height: 100%;
+    z-index: 2;
+    pointer-events: none;
 }
 
 .inline-va-annotation {
     position: absolute !important;
     display: table;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.05);
     color: #FFFFFF;
+    z-index: 11;
+    pointer-events: all;
+}
+
+.inline-va-annotation:hover {
+    background: rgba(0, 0, 0, 0.3);
 }
 
 .inline-va-annotation span {
@@ -52,6 +77,10 @@ video-annotation.showing {
 
 video-annotation.completed {
     opacity: 0.5;
+}
+
+video-annotation.hovered {
+    background: red;
 }
 
 video-annotation.default {
