--- a/views/admin-lte/catalogs/courseDetailContentMap.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentMap.ejs
@@ -2,7 +2,6 @@
     <div class="w {{data.type}}" id="t{{data._id}}" data-from-root-x="{{data.positionFromRoot.x}}"
          data-from-root-y="{{data.positionFromRoot.y}}"
          data-shape="{{getDataShape(data.type)}}"
-         data-toggle="dropdown" data-hover="dropdown"
             ng-class="{'owned': (data.createdBy==user._id), 'deleted': data.isDeleted}">
 
         <span ng-show="data.type == 'contentNode' && data.resources.length > 0">
@@ -71,13 +70,13 @@
         <div ng-repeat="data in treeNodes" ng-include="'tree_item_renderer.html'" on-finish-render="jsTreeInit">
         </div>
 
-        <div class="center-course" id="center" data-shape="Rectangle" data-toggle="dropdown" data-hover="dropdown">
+        <div class="center-course" id="center" data-shape="Rectangle">
             {{course.name}}
 
             <ul class="dropdown-menu dropdown-course">
                 <li>
                     <a class="cursor" data-toggle="modal" data-target="#addSubTopicModal"
-                       ng-click="setMode('add', 'subTopic')">
+                       ng-click="setMode('add', 'subTopic', false)">
                         <i class="ionicons ion-android-add"></i>
                         <i class="ionicons ion-android-folder"></i>
                         Add Sub Topic</a>
