--- a/views/admin-lte/catalogs/addContentNodeModal.ejs
+++ b/views/admin-lte/catalogs/addContentNodeModal.ejs
@@ -42,8 +42,8 @@
                                     <div class="controls">
                                         <div class="btn btn-sm btn-default"
                                              ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
-                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='100000000'>
-                                            <i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file
+                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='50000000'>
+                                            <i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file (Max 24MB)
                                         </div>
                                         &nbsp; <span ng-repeat="f in filespdf">{{f.name}}</span>
                                     </div>
@@ -59,7 +59,7 @@
                                         <div class="btn btn-sm btn-default"
                                              ngf-select accept="video/*" ngf-accept="'video/*'"
                                              ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i
-                                                class="fa fa-file-video-o"></i> &nbsp; Select a video file
+                                                class="fa fa-file-video-o"></i> &nbsp; Select a video file  (Max 75MB)
                                         </div>
                                         &nbsp; <span ng-repeat="f in filesvideo">{{f.name}}</span>
                                     </div>
