drawer tab in node detail

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -803,6 +803,7 @@ toastr custom*/
     padding-right: 25px;
     width:80px!important;
     left:-100px!important;
+    padding-bottom: 25px;
 }
 
 .draw-tab-show{
