--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row ">
 
-    <div id="commentController" class="col-xs-11" ng-controller="CommentListController">
+    <div id="commentController" class="col-xs-11 container-fluid" ng-controller="CommentListController">
 
-        <div class="slide-container col-sm-8 col-md-8">
+        <div class="slide-container col-sm-7 col-md-7">
             <div id="viewerWrapper">
 
                 <pdf-viewer source="{{pdfFile.link}}" current-page-number="1"></pdf-viewer>
