--- a/public/videogular-themes-default/videogular.css
+++ b/public/videogular-themes-default/videogular.css
@@ -1,5 +1,5 @@
 /**
- * @license videogular v1.1.0 http://videogular.com
+ * @license videogular v1.2.7 http://videogular.com
  * Two Fucking Developers http://twofuckingdevelopers.com
  * License: MIT
  */
@@ -44,7 +44,7 @@ videogular, [videogular] {
   /**********************/ }
   videogular button, [videogular] button {
     cursor: pointer; }
-  videogular .fullscreen, [videogular] .fullscreen {
+  videogular.fullscreen, [videogular].fullscreen {
     position: fixed;
     left: 0;
     top: 0; }
@@ -54,11 +54,11 @@ videogular, [videogular] {
     max-width: 100%;
     max-height: 100%;
     display: block; }
-  videogular video, [videogular] video {
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%; }
+    videogular vg-media video, [videogular] vg-media video {
+      width: 100%;
+      height: 100%;
+      max-width: 100%;
+      max-height: 100%; }
   videogular .iconButton, [videogular] .iconButton {
     color: #FFFFFF;
     font-family: 'videogular';
@@ -82,7 +82,8 @@ videogular, [videogular] {
     position: absolute;
     display: block;
     z-index: 1;
-    top: 0; }
+    top: 0;
+    pointer-events: none; }
   videogular vg-poster img, [videogular] vg-poster img {
     width: auto;
     height: auto;
@@ -132,7 +133,7 @@ videogular, [videogular] {
     display: block;
     position: absolute;
     z-index: 3;
-    top: calc(100% - 50px); }
+    bottom: 0; }
   videogular vg-controls .controls-container, [videogular] vg-controls .controls-container {
     width: 100%;
     height: 50px;
@@ -169,7 +170,8 @@ videogular, [videogular] {
     margin-top: 24px;
     margin-bottom: 24px;
     height: 2px;
-    background-color: black; }
+    background-color: black;
+    position: relative; }
   videogular vg-scrub-bar :focus vg-scrub-bar-current-time, [videogular] vg-scrub-bar :focus vg-scrub-bar-current-time {
     border-right: 6px black groove; }
   videogular vg-scrub-bar-current-time, [videogular] vg-scrub-bar-current-time {
@@ -177,6 +179,34 @@ videogular, [videogular] {
     width: 100%;
     height: 100%;
     display: block;
+    cursor: pointer; }
+  videogular vg-scrub-bar-buffer, [videogular] vg-scrub-bar-buffer {
+    position: absolute;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 100%;
+    display: block;
+    cursor: pointer;
+    zoom: 1;
+    filter: alpha(opacity=50);
+    opacity: 0.5; }
+  videogular vg-scrub-bar-cue-points, [videogular] vg-scrub-bar-cue-points {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative; }
+    videogular vg-scrub-bar-cue-points .cue-point-timeline, [videogular] vg-scrub-bar-cue-points .cue-point-timeline {
+      color: #FFFFFF;
+      padding-top: 3px; }
+      videogular vg-scrub-bar-cue-points .cue-point-timeline .cue-point, [videogular] vg-scrub-bar-cue-points .cue-point-timeline .cue-point {
+        position: absolute;
+        height: 3px;
+        background-color: #FFFFFF; }
+  videogular vg-playback-button, [videogular] vg-playback-button {
+    display: table-cell;
+    width: 50px;
+    vertical-align: middle;
+    text-align: center;
     cursor: pointer; }
   videogular vg-volume, [videogular] vg-volume {
     display: table-cell;
