--- a/views/admin-lte/catalogs/addContentNodeModal.ejs
+++ b/views/admin-lte/catalogs/addContentNodeModal.ejs
@@ -41,15 +41,54 @@
                                 <div class="control-group">
                                     <label class="control-label" for="pdf">Upload PDF</label>
 
-                                    <div class="controls">
-                                        <div class="btn btn-sm btn-default"
-                                             ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
-                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='50000000'>
-                                            <i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file (Max 24MB)
-                                        </div>
-                                        &nbsp; <span ng-repeat="f in filespdf">{{f.name}}</span>
-                                    </div>
+                                    <ul class="nav nav-tabs">
+                                        <li class="active">
+                                            <a data-toggle="tab" data-target="#upload-pdf">
+                                                <i class="fa fa-hdd-o"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" data-target="#upload-pdf-link">
+                                                <i class="fa fa-globe"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div class="tab-content" style="min-height:80px;">
+                                        <div id="upload-pdf" class="tab-pane fade in active">
+                                            <div class="controls">
+                                                <br>
+                                                <div ng-show="pdfHostLink.trim()!=''">
+                                                    You have added a link to an external pdf,
+                                                    please remove it if you want to upload from local drive.
+                                                </div>
 
+                                                <div class="btn btn-sm btn-default"
+                                                     ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
+                                                     ng-model="filespdf" ngf-multiple="false" ngf-max-size='50000000'
+                                                     ng-hide="pdfHostLink.trim()!=''">
+                                                    <i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file (Max 24MB)
+                                                </div>
+                                                &nbsp; <span ng-repeat="f in filespdf">{{f.name}}</span>
+                                            </div>
+                                        </div>
+
+                                        <div id="upload-pdf-link" class="tab-pane fade in">
+                                            <div ng-hide="filespdf.length > 0">
+                                                <br>
+                                                <div class="input-group">
+                                                    <span class="input-group-addon"><i class="fa fa-chain"></i></span>
+                                                    <input type="url" class="form-control" placeholder="http://" ng-model="pdfHostLink">
+                                                </div>
+
+                                                <span class="error" ng-show="addContentNodeForm.pdfHostLink.$error.url">
+                                                    Not a valid url!</span>
+                                            </div>
+                                            <div ng-show="filespdf.length > 0">
+                                                <br>
+                                                You have added a pdf, please remove it if you want to use an external link
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
@@ -96,8 +135,6 @@
                                         </div>
                                         <div id="upload-link" class="tab-pane fade">
                                             <div ng-hide="filesvideo.length > 0">
-                                                <!--<h5 >Video Link</h5>
-                                                <input type="url" ng-model="videoHostLink" class="form-control" name="videoHostLink">-->
                                                 <br>
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><i class="fa fa-chain"></i></span>
@@ -105,7 +142,7 @@
                                                 </div>
 
                                                 <span class="error" ng-show="addContentNodeForm.videoHostLink.$error.url">
-                                                    Not valid url!</span>
+                                                    Not a valid url!</span>
                                             </div>
                                             <div ng-show="filesvideo.length > 0">
                                                 <br>
