--- a/views/admin-lte/catalogs/editContentNodeModal.ejs
+++ b/views/admin-lte/catalogs/editContentNodeModal.ejs
@@ -39,16 +39,69 @@
                                 <div class="control-group">
                                     <label class="control-label" for="pdf">Upload PDF</label>
 
-                                    <div class="controls">
-                                        <div class="btn btn-sm btn-default"
-                                             ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
-                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='50000000'><i
-                                                class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file (Max 24MB)
+                                    <ul class="nav nav-tabs">
+                                        <li class="active">
+                                            <a data-toggle="tab" data-target="#upload-pdf">
+                                                <i class="fa fa-hdd-o"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a data-toggle="tab" data-target="#upload-pdf-link">
+                                                <i class="fa fa-globe"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div class="tab-content" style="min-height:80px;">
+                                        <div id="upload-pdf" class="tab-pane fade in active">
+                                            <div class="controls">
+                                                <br>
+
+                                                <div ng-show="pdfHostLink.trim()!=''">
+                                                    You have added a link to an external pdf,
+                                                    please remove it if you want to upload from local drive.
+                                                </div>
+                                                <div class="btn btn-sm btn-default"
+                                                     ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
+                                                     ng-model="filespdf" ngf-multiple="false" ngf-max-size='50000000'
+                                                     ng-hide="pdfHostLink.trim()!=''">
+                                                    <i class="fa fa-file-pdf-o"> </i>
+                                                    &nbsp; Select a pdf file (Max 24MB)
+                                                </div>
+                                                <br>
+                                                <span ng-repeat="f in filespdf">
+                                                    <div class="label label-info ">
+                                                        {{f.name}}
+                                                        <a ng-click="clearPdf()">
+                                                            <i class="fa fa-close"></i>
+                                                        </a>
+                                                    </div>
+                                                </span>
+                                            </div>
                                         </div>
-                                        &nbsp; <span ng-repeat="f in filespdf">{{f.name}}</span>
+                                        <div id="upload-pdf-link" class="tab-pane fade in">
+                                            <div ng-hide="filespdf.length > 0">
+                                                <br>
+
+                                                <div class="input-group">
+                                                    <span class="input-group-addon"><i class="fa fa-chain"></i></span>
+                                                    <input type="url" class="form-control" placeholder="http://"
+                                                           ng-model="pdfHostLink">
+                                                </div>
+
+                                                <span class="error"
+                                                      ng-show="editContentNodeForm.pdfHostLink.$error.url">
+                                                    Not a valid url!</span>
+                                            </div>
+                                            <div ng-show="filespdf.length > 0">
+                                                <br>
+                                                You have added a pdf, please remove it if you want to use an external
+                                                link
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-md-6" id="pdf2" ng-show="currentEditNode.pdfFile">
                                 <div class="control-group">
                                     <label class="control-label">You have uploaded a pdf</label>
@@ -57,17 +110,67 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6" id="video" ng-hide="currentEditNode.videoFile">
-                                <div class="control-group">
-                                    <label class="control-label" for="video">Upload Video</label>
 
-                                    <div class="controls">
-                                        <div class="btn btn-sm btn-default"
-                                             ngf-select accept="video/*" ngf-accept="'video/*'"
-                                             ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i
-                                                class="fa fa-file-video-o"></i> &nbsp; Select a video file (Max 75MB)
+                            <div class="col-md-6" id="video" ng-hide="currentEditNode.videoFile">
+                                <ul class="nav nav-tabs">
+                                    <li class="active">
+                                        <a data-toggle="tab" data-target="#upload-video">
+                                            <i class="fa fa-hdd-o"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a data-toggle="tab" data-target="#upload-link">
+                                            <i class="fa fa-youtube"></i>
+                                            <i class="fa fa-vimeo-square"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+
+                                <div class="tab-content" style="min-height:80px;">
+                                    <div id="upload-video" class="tab-pane fade in active">
+                                        <br>
+                                        <div ng-show="videoHostLink.trim()!=''">
+                                            You have added a link to an external video, please remove it if you want to
+                                            upload from local drive.
                                         </div>
-                                        &nbsp; <span ng-repeat="f in filesvideo">{{f.name}}</span>
+                                        <div class="control-group">
+                                            <label class="control-label" for="video">Upload Video</label>
+
+                                            <div class="controls">
+                                                <div class="btn btn-sm btn-default"
+                                                     ngf-select accept="video/*" ngf-accept="'video/*'"
+                                                     ng-model="filesvideo" ngf-multiple="false"
+                                                     ngf-max-size='100000000'>
+                                                    <i class="fa fa-file-video-o"></i>
+                                                    &nbsp; Select a video file (Max 75MB)
+                                                </div>
+                                                <br>
+                                                <span ng-repeat="f in filesvideo">
+                                                <div class="label label-info ">
+                                                    {{f.name}}
+                                                    <a ng-click="clearVideo()" class="cursor"> <i class="fa fa-close"></i> </a>
+                                                </div>
+                                                </span>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+                                    <div id="upload-link" class="tab-pane fade">
+                                        <div ng-hide="filesvideo.length > 0">
+                                            <br>
+                                            <div class="input-group">
+                                                <span class="input-group-addon"><i class="fa fa-chain"></i></span>
+                                                <input type="url" class="form-control" placeholder="http://youtube.com/" ng-model="videoHostLink">
+                                            </div>
+
+                                                <span class="error" ng-show="editContentNodeForm.videoHostLink.$error.url">
+                                                    Not a valid url!</span>
+                                        </div>
+                                        <div ng-show="filesvideo.length > 0">
+                                            <br>
+                                            You have added a file video, please remove it if you want to use an external link
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -82,8 +185,9 @@
                             </div>
 
                             <div class="col-xs-12" ng-show="progressPercentage > 0">
-                                <div class="progress" >
-                                    <div class="progress-bar" ng-style="{'width': progressPercentage + '%','height': '2px'}"></div>
+                                <div class="progress">
+                                    <div class="progress-bar"
+                                         ng-style="{'width': progressPercentage + '%','height': '2px'}"></div>
                                 </div>
                             </div>
 
