fix y scrolling in widget

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -729,8 +729,11 @@ a.videoButton:hover{
 }
 .grid-stack>.grid-stack-item>.grid-stack-item-content{
     background: white;
+    overflow-y: hidden!important;
 }
-
+.grid-stack-item-content .box-body{
+    overflow-y: auto;
+}
 .empty-widget{
     width: 100%;
     text-align: center;
