--- a/views/my-course/created-courses.ejs
+++ b/views/my-course/created-courses.ejs
@@ -1,4 +1,4 @@
-<div class="box-body no-padding" ng-controller="CourseListCreatedController">
+<div ng-controller="CourseListCreatedController">
     <table class="table table-striped">
         <tbody>
         <tr>
