use gravatar as profile image

--- a/views/admin-lte/profiles/editAccountModal.ejs
+++ b/views/admin-lte/profiles/editAccountModal.ejs
@@ -96,6 +96,24 @@
                                     </div>
 
                                     <div class="control-group">
+                                        <p></p>
+                                        <!-- Password -->
+                                        <label class="control-label" for="passwordConfirm">Image</label>
+
+                                        <div class="controls">
+
+                                            <div class="callout callout-info">
+                                                <p>Your image is obtained from Gravatar API.<br>
+                                                Please visit this <a href="https://en.gravatar.com/support/activating-your-account/" target="_blank"> Gravatar's page </a> to get more info.
+                                                <br>on how to upload or edit your image.
+                                                </p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+
+                                    <div class="control-group">
                                         <br class="clear">
                                         <span class="help-block" ng-show="errors">{{ errors }}</span>
                                         <!-- Button -->
