--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -39,7 +39,8 @@
 
                 <li class="dropdown user user-menu notifications-menu" ng-show="user" ng-cloak>
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="/admin-lte/images/user2-160x160.png" class="user-image" alt="User Image"/>
+                        <img src="/admin-lte/images/user2-160x160.png" class="user-image" alt="User Image" ng-hide="user.image" ng-cloak />
+                        <img ng-src="{{user.image}}" class="user-image" alt="User Image" ng-show="user.image" ng-cloak />
                         <i ng-hide="user" class="fa fa-refresh fa-spin"></i>
                         <span ng-show="user.username && !user.displayName" class="hidden-xs">{{user.username | capitalize:true}}</span>
                         <span ng-show="user.displayName" class="hidden-xs">{{user.displayName | capitalize:true}}</span>
