fix title in profile and homapage

--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -5,7 +5,7 @@
     <% include mainMenu %>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+    <div class="content-wrapper" ng-controller="ProfileController">
 
         <section class="content-header">
             <ol class="breadcrumb">
