fix deleted category 404

--- a/views/admin-lte/profiles/editAccountModal.ejs
+++ b/views/admin-lte/profiles/editAccountModal.ejs
@@ -104,8 +104,7 @@
 
                                             <div class="callout callout-info">
                                                 <p>Your image is obtained from Gravatar API.<br>
-                                                Please visit this <a href="https://en.gravatar.com/support/activating-your-account/" target="_blank"> Gravatar's page </a> to get more info.
-                                                <br>on how to upload or edit your image.
+                                                Please visit this <a href="https://en.gravatar.com/support/activating-your-account/" target="_blank"> Gravatar's page</a> to get more info on how to upload or edit your image.
                                                 </p>
                                             </div>
 
