--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -8,7 +8,7 @@
     <section class="content-header">
         <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="/courses/#/category/<%=course.category.slug%>"> </i> <%=course.category.name%></a></li>
+            <li><a href="/courses/#/category/{{course.category.slug}}%>"> </i> {{course.category.name}}</a></li>
             <li class="active">{{course.name}}</li>
         </ol>
     </section>
