--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -21,58 +21,69 @@
 
             <!-- for routing purpose we write it as an ng-view although we write the html also in this file. -->
             <section class="content">
+
                 <div class="col-md-12">
-                    <div class="col-md-12 filter">
-                        <h4 ng-show="filterTags.length > 0">Filtered By:</h4>
+
+                    <div class="row">
+                        <div class="col-md-12 filter">
+                            <h4 ng-show="filterTags.length > 0">Filtered By:</h4>
                     <span class="label label-primary" ng-repeat="tag in filterTags">
                         <button class="btn btn-box-tool" ng-click="removeFilter(tag)">
                             <i class="fa fa-times"></i></button>
                          {{tag.name}}</span>
 
-                        <h4>Available Filters:</h4>
-                        <a class="label label-primary" ng-repeat="tag in availableTags" ng-click="applyFilter(tag)">
-                            {{tag.name}}</a>
-                        <span class="label label-primary" ng-show="availableTags.length == 0">-</span>
+                            <h4>Available Filters:</h4>
+                            <a class="label label-primary" ng-repeat="tag in availableTags" ng-click="applyFilter(tag)">
+                                {{tag.name}}</a>
+                            <span class="label label-primary" ng-show="availableTags.length == 0">-</span>
 
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                        <div class="col-xs-12 col-md-4">
-                            <h4  class="courses-title">Courses:</h4>
+                            <div class="col-xs-12 col-md-4">
+                                <h4 class="courses-title">Courses:</h4>
 
-                            <a ng-click="toggle = !toggle" class="cursor ionicons ion-search course-search-icon"></a>
-                            <input class="form-control course-search-box"
-                                   id="search-box"
-                                   placeholder="Search..." ng-show="toggle" ng-model="query">
-                        </div>
-
-                    </div>
-                    <div class="col-sm-6 col-lg-3" ng-repeat="c in courses | filter:query">
-                        <div class="form_hover" ng-mouseenter="getCourseAnalytics(c._id)">
-                            <div class="box box-primary peekCourse">
-                                <div class="box-header with-border">
-                                    <a href="/course/{{c.slug}}/#/cid/{{c._id}}" class="box-title">{{c.name}}</a>
-                                </div>
-                                <div class="box-body" style="text-align: center">
-                                    <img class="course-picture" ng-show="c.picture" ng-src="{{c.picture}}">
-                                    <img ng-hide="c.picture" src="/img/default-tree.png">
-                                </div>
+                                <a ng-click="toggle = !toggle"
+                                   class="cursor ionicons ion-search course-search-icon"></a>
+                                <input class="form-control course-search-box"
+                                       id="search-box"
+                                       placeholder="Search..." ng-show="toggle" ng-model="query">
                             </div>
 
-                            <div class="header">
-                                <div class="blur"></div>
-                                <div class="box box-primary caption-text">
-                                    <div class="box-header with-border">
-                                        <a href="/course/{{c.slug}}/#/cid/{{c._id}}" class="box-title">{{c.name}}</a>
-                                    </div>
-                                    <div class="box-body course-list" style="height: 140px;">
-                                        <div class="courses-analytics" ng-bind-html="widgets[c._id]">
-                                        </div>
+                        </div>
+                    </div>
 
+                    <div class="row">
+                        <div class="col-sm-6 col-lg-3" ng-repeat="c in courses | filter:query">
+                            <div class="form_hover" ng-mouseenter="getCourseAnalytics(c._id)">
+                                <div class="box box-primary peekCourse">
+                                    <div class="box-header with-border">
+                                        <a href="/course/{{c.slug}}/#/cid/{{c._id}}"
+                                           class="box-title">{{c.name}}</a>
                                     </div>
-                                    <div class="box-footer">
-                                        <a class="btn btn-primary" href="/course/{{c.slug}}/#/cid/{{c._id}}"><i
-                                                class=""></i> Go to course</a>
+                                    <div class="box-body" style="text-align: center">
+                                        <img class="course-picture" ng-show="c.picture" ng-src="{{c.picture}}">
+                                        <img ng-hide="c.picture" src="/img/default-tree.png">
+                                    </div>
+                                </div>
+
+                                <div class="header">
+                                    <div class="blur"></div>
+                                    <div class="box box-primary caption-text">
+                                        <div class="box-header with-border">
+                                            <a href="/course/{{c.slug}}/#/cid/{{c._id}}"
+                                               class="box-title">{{c.name}}</a>
+                                        </div>
+                                        <div class="box-body course-list" style="height: 140px;">
+                                            <div class="courses-analytics" ng-bind-html="widgets[c._id]">
+                                            </div>
+
+                                        </div>
+                                        <div class="box-footer">
+                                            <a class="btn btn-primary" href="/course/{{c.slug}}/#/cid/{{c._id}}"><i
+                                                    class=""></i> Go to course</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
