--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -5,7 +5,7 @@
     <!-- breadcrumb 2nd row -->
     <ol class="breadcrumb">
         <li class="home"><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp; {{course.name}}</a></li>
-        <li>Map</li>
+        <li><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a></li>
         <li><strong>Content Node</strong> : <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a></li>
         <li class="active">{{tabs[currentTab]}}</li>
     </ol>
