Changed "filters" to always stay on top of the comments even when scrolling through them

--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -138,10 +138,17 @@ input#searchInput{
 }
 
 .commentZoneList{
+  /*max-height: 600px;*/
+/*  overflow-y: auto;
+  overflow-x: hidden;*/
+}
+
+#commentList{
   max-height: 600px;
   overflow-y: auto;
   overflow-x: hidden;
 }
+
 
 .slideRect{
 }
