--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -135,6 +135,7 @@
                                          posted-date="{{comment.date}}"
                                          post-content="comment.html"
                                          is-post-owner="comment.author==$root.user.username"
+                                         post-owner="comment.author"
                                          show-control="true"
                                          show-reply-button="false"
                                          show-delete-button="true"
