fixing discussion on xs and sm

--- a/views/admin-lte/discussion/topics.ejs
+++ b/views/admin-lte/discussion/topics.ejs
@@ -18,7 +18,7 @@
             <div class="posts-list"
                  ng-show="topics.length > 0 && (
                   (pid && (wSize != 'xs' && wSize != 'sm')) ||
-                  (!pid && (wSize == 'xs' || wSize == 'sm')) )
+                  (!pid) )
                  ">
 
                 <ul class="posts">
