hide pdf link upload

--- a/views/admin-lte/catalogs/editContentNodeModal.ejs
+++ b/views/admin-lte/catalogs/editContentNodeModal.ejs
@@ -45,7 +45,7 @@
                                                 <i class="fa fa-hdd-o"></i>
                                             </a>
                                         </li>
-                                        <li>
+                                        <li ng-hide="true">
                                             <a data-toggle="tab" data-target="#upload-pdf-link">
                                                 <i class="fa fa-globe"></i>
                                             </a>
