fixed filter padding in slideAnnotation

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -107,8 +107,8 @@
 
 
             </div>
-
-            <div class="filter-wrapper col-xs-1">
+            <div class="col-xs-12">
+            <div class="filter-wrapper col-xs-2">
               <span class="filter-header">Filter: </span>
             </div>
             <div >
@@ -173,6 +173,7 @@
                         </div>
                     </div>
                 </div>
+              </div>
 
         </div>
 
