removed fullscreen button in slideAnnotator

--- a/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
@@ -24,9 +24,9 @@
             </div>
         </div>
         <div class="col-md-4 text-right">
-            <a id="btn-fullscreen"
+            <!--<a id="btn-fullscreen"
                 class="glyphicon glyphicon-fullscreen iconSlideNav cursor"
-                aria-hidden="true"></a>
+                aria-hidden="true"></a>-->
         </div>
     </div>
 </div>
