--- a/views/admin-lte/catalogs/courseDetailContentMapModals.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentMapModals.ejs
@@ -15,6 +15,14 @@
     </div>
 </div>
 
+<!-- edit contentNode form -->
+<div class="row">
+    <div class="modal" id="editContentNodeModal" tabindex="-1" role="dialog"
+         aria-labelledby="edit view" aria-hidden="true">
+        <div ng-include="'/course/editContentNode'"></div>
+    </div>
+</div>
+
 <!-- edit subtopic Node Modal form -->
 <div class="row">
     <div class="modal" id="editSubTopicModal" tabindex="-1" role="dialog"
