--- a/views/admin-lte/catalogs/nodeDetailModal.ejs
+++ b/views/admin-lte/catalogs/nodeDetailModal.ejs
@@ -1,12 +1,12 @@
 
-
-<!-- course edit form -->
+<!-- node edit form -->
 <div class="row">
     <div class="modal" id="editContentNodeModal" tabindex="-1" role="dialog"
          aria-labelledby="edit view" aria-hidden="true">
         <div ng-include="'/course/editContentNode'"></div>
     </div>
 </div>
+
 <!-- widgetGallery for course analytics -->
 <div class="row" ng-controller="WidgetGalleryController">
     <div class="modal" id="widgetGalleryNodeAnalytics" tabindex="-1" role="dialog"
@@ -15,25 +15,4 @@
     </div>
 </div>
 
-<!-- edit Content Node Modal form -->
-<div class="row">
-    <div class="modal" id="addContentNodeModal" tabindex="-1" role="dialog"
-         aria-labelledby="add sub topic" aria-hidden="true">
 
-        <div ng-include="'/course/editContentNode'"></div>
-    </div>
-</div>
-
-<!-- TODO: revisit and decide on usefulness
-<div class="row">
-    <div class="modal" id="editCommentModal" tabindex="-1" role="dialog"
-         aria-labelledby="comment edit view" aria-hidden="true">
-        <div>
-          <label>
-            Enter your new comment:
-          </label>
-
-        </div>
-
-    </div>
-</div>-->
