--- a/views/admin-lte/catalogs/courseDetailModals.ejs
+++ b/views/admin-lte/catalogs/courseDetailModals.ejs
@@ -21,3 +21,11 @@
         <div ng-include="'/course/edit'"></div>
     </div>
 </div>
+
+<!-- course setting form -->
+<div class="row">
+    <div class="modal" id="configView" tabindex="-1" role="dialog"
+         aria-labelledby="config view" aria-hidden="true">
+         <% include courseConfigModal %>
+    </div>
+</div>
