--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -8,7 +8,7 @@
             <div class="description">
                 Started
                 <strong>
-                {{course.dateAdded | relativeDate}}
+                    {{course.dateAdded | relativeDate}}
                 </strong>
 
                 By
@@ -33,7 +33,8 @@
             </div>
 
             <div class="" ng-show="course.video">
-                <a class="cursor videoButton" ng-click="playVideo()" aria-label="play intro video" title="Play Intro Video">
+                <a class="cursor videoButton" ng-click="playVideo()" aria-label="play intro video"
+                   title="Play Intro Video">
                 </a>
             </div>
         </div>
@@ -56,17 +57,18 @@
     <div class="grid-stack-item"
          data-gs-locked="yes"
          data-gs-no-resize="yes"
-         ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}" >
+         ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}">
         <!--on-finish-render="OnAfterWidgetLoadedcourse-preview"-->
         <div class="grid-stack-item-content">
             <div class="box no-shadow">
                 <div class="box-header with-border">
                     <h3 class="box-title">{{wdg.widget}}</h3>
+
                     <div class="box-tools pull-right">
                         <button class="btn btn-box-tool" data-widget="remove"
                                 data-toggle="tooltip" title="Remove"
                                 ng-click="closeWidget(wdg.widgetId._id);"
-                                >
+                        >
                             <i class="fa fa-times"></i></button>
                     </div>
                 </div>
@@ -77,7 +79,7 @@
                     </div>
 
                 </div>
-                <div class="box-footer"> </div>
+                <div class="box-footer"></div>
             </div>
         </div>
     </div>
@@ -85,22 +87,22 @@
 <!-- analytics-->
 
 <div class="videoPlayerWrapper" ng-show="course.video && isPlaying" ng-click="stopVideo()">
-<div class="videoPlayerContainer" ng-click="$event.stopPropagation()" ng-controller="VideoContentPreviewController">
-    <videogular vg-cue-points="cuePoints" vg-player-ready="onPlayerReady($API)">
-        <vg-media vg-src="videoSources"></vg-media>
-        <vg-controls>
-            <vg-play-pause-button></vg-play-pause-button>
-            <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
-            <vg-scrub-bar>
-                <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-            </vg-scrub-bar>
-            <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
-            <vg-volume>
-                <vg-mute-button></vg-mute-button>
-                <vg-volume-bar></vg-volume-bar>
-            </vg-volume>
-            <vg-fullscreen-button></vg-fullscreen-button>
-        </vg-controls>
-    </videogular>
+    <div class="videoPlayerContainer" ng-click="$event.stopPropagation()" ng-controller="VideoContentPreviewController">
+        <videogular vg-cue-points="cuePoints" vg-player-ready="onPlayerReady($API)">
+            <vg-media vg-src="videoSources"></vg-media>
+            <vg-controls>
+                <vg-play-pause-button></vg-play-pause-button>
+                <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
+                <vg-scrub-bar>
+                    <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                </vg-scrub-bar>
+                <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
+                <vg-volume>
+                    <vg-mute-button></vg-mute-button>
+                    <vg-volume-bar></vg-volume-bar>
+                </vg-volume>
+                <vg-fullscreen-button></vg-fullscreen-button>
+            </vg-controls>
+        </videogular>
     </div>
 </div>
